i965 assertion failure in fallback_rgbx_to_rgba
a.out: ../src/mesa/drivers/dri/i965/intel_fbo.c:355: fallback_rgbx_to_rgba: Assertion `screen->mesa_format_supports_render[format]' failed.
The assertion is coming from a compiled mesa from master with the following commit !3204 (merged).
I'm using Sway and SDL2 to get a native window handle to create a EGL context.
Here's the backtrace :
#0 0x00007ffff7c2ef25 in raise () from /usr/lib/libc.so.6
#1 0x00007ffff7c18897 in abort () from /usr/lib/libc.so.6
#2 0x00007ffff7c18767 in __assert_fail_base.cold () from /usr/lib/libc.so.6
#3 0x00007ffff7c27526 in __assert_fail () from /usr/lib/libc.so.6
#4 0x00007ffff5d249ec in fallback_rgbx_to_rgba (screen=0x555555599ac0,
rb=0x55555585cfa0, original_format=PIPE_FORMAT_Z16_UNORM)
at ../src/mesa/drivers/dri/i965/intel_fbo.c:355
#5 0x00007ffff5d24cdb in intel_create_winsys_renderbuffer (screen=0x555555599ac0,
format=PIPE_FORMAT_Z16_UNORM, num_samples=0)
at ../src/mesa/drivers/dri/i965/intel_fbo.c:470
#6 0x00007ffff5d24d2c in intel_create_private_renderbuffer (
screen=0x555555599ac0, format=PIPE_FORMAT_Z16_UNORM, num_samples=0)
at ../src/mesa/drivers/dri/i965/intel_fbo.c:493
#7 0x00007ffff5d3701f in intelCreateBuffer (dri_screen=0x555555596b70,
driDrawPriv=0x55555585d7b0, mesaVis=0x555555814710, isPixmap=0 '\000')
at ../src/mesa/drivers/dri/i965/intel_screen.c:1824
#8 0x00007ffff5ddc18c in driCreateNewDrawable (screen=0x555555596b70,
config=0x555555814710, data=0x55555586da00)
at ../src/mesa/drivers/dri/common/dri_util.c:693
#9 0x00007ffff757c0ae in dri2_create_drawable (dri2_dpy=0x55555556a310,
config=0x555555814710, dri2_surf=0x55555586da00, loaderPrivate=0x55555586da00)
at ../src/egl/drivers/dri2/egl_dri2.c:1560
#10 0x00007ffff7589727 in dri2_wl_create_window_surface (drv=0x55555556a190,
disp=0x5555555696b0, conf=0x555555818190, native_window=0x55555585cf50,
attrib_list=0x7fffffffe1ac) at ../src/egl/drivers/dri2/platform_wayland.c:387
#11 0x00007ffff757c635 in dri2_create_window_surface (drv=0x55555556a190,
disp=0x5555555696b0, conf=0x555555818190, native_window=0x55555585cf50,
attrib_list=0x7fffffffe1ac) at ../src/egl/drivers/dri2/egl_dri2.c:1701
#12 0x00007ffff756be15 in _eglCreateWindowSurfaceCommon (disp=0x5555555696b0,
config=0x555555818190, native_window=0x55555585cf50,
attrib_list=0x7fffffffe1ac) at ../src/egl/main/eglapi.c:973
#13 0x00007ffff756bef3 in eglCreateWindowSurface (dpy=0x5555555696b0,
config=0x555555818190, window=93824995413840, attrib_list=0x7fffffffe1ac)
at ../src/egl/main/eglapi.c:989
#14 0x00007ffff7e5357a in ?? () from /usr/lib/libSDL2-2.0.so.0
#15 0x00007ffff7e9f6dd in ?? () from /usr/lib/libSDL2-2.0.so.0
#16 0x00007ffff7e5fac7 in ?? () from /usr/lib/libSDL2-2.0.so.0
#17 0x00005555555552ab in main ()
I can supply my code if necessary, but the crash in main
occurs before any of my code.
Mesa is compiled with the following options
$ meson build \
-D buildtype=debug \
--wrap-mode=nofallback \
-D prefix=/usr \
-D sysconfdir=/etc \
-D platforms=x11,wayland,drm,surfaceless \
-D dri-drivers=i915,i965,r200,r100,nouveau \
-D gallium-drivers=r300,r600,radeonsi,nouveau,svga,swrast,virgl,iris,zink \
-D vulkan-drivers=amd,intel \
-D dri3=true \
-D egl=true \
-D gallium-extra-hud=true \
-D gallium-nine=true \
-D gallium-omx=bellagio \
-D gallium-va=true \
-D gallium-vdpau=true \
-D gallium-xa=true \
-D gallium-xvmc=false \
-D gbm=true \
-D gles1=false \
-D gles2=true \
-D glvnd=true \
-D glx=dri \
-D libunwind=true \
-D llvm=true \
-D lmsensors=true \
-D osmesa=gallium \
-D shared-glapi=true \
-D gallium-opencl=icd \
-D valgrind=false \
-D vulkan-overlay-layer=true \
-D tools=[]